--- a/index2.html
+++ b/index2.html
@@ -51,7 +51,7 @@
         }
 
         .photo img {
-            width: 70%;
+            width: 100%;
             height: 100%;
             object-fit: cover;
         }
@@ -137,7 +137,7 @@
     <div class="container">
         <h1>Happy Birthday Ra Rohith!</h1>
         <div class="photo">
-            <img src="/https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQFkVN4rfHG3-d1QZbxlkEE0mdQjaPSMIMSA&s"width="20px">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQFkVN4rfHG3-d1QZbxlkEE0mdQjaPSMIMSA&s" alt="Italian Trulli" width="50px">
         </div>
         <p>Happy Birthday to my best friend who has been there through it all.!</p>
         <p>🎉Make it the Best Day Ever! so lets make it memorable 🎉</p>
